Fixes issue #341 resolved license layout issue pushing labels back to their correct position.;

--- a/app/web-app/css/style.css
+++ b/app/web-app/css/style.css
@@ -222,7 +222,6 @@
 }
 
 .licence-info dt {
-    float: left;
     width: 20%;
     font-weight: bold;
 }
